<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_register"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:id="@+id/lin_all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

    <Button
        android:id="@+id/add_business_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:background="#ea4c88"
        android:layout_height="wrap_content"
        android:text="@string/add_business"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:textColor="@color/white"
        />


    <Button
        android:id="@+id/add_business_act_button"
        style="?android:textAppearanceSmall"
        android:background="#ea4c88"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:textColor="@color/white"
        android:text="@string/add_business_act"
        />

        <Button
            android:id="@+id/delete_business"
            style="?android:textAppearanceSmall"
            android:background="#ea4c88"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:textColor="@color/white"
            android:text="@string/delete_business_b"
            />

    <Button
        android:id="@+id/sign_out"
        style="?android:textAppearanceSmall"
        android:background="#faaac8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="Loguut"
        android:textColor="@color/white"
        />

    </LinearLayout>
</RelativeLayout >
